--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 														<!-- END CHATTY INTRO -->
 														
 														<p>
-														P.S. You are receiving this email because you have a dmClub account as {{{PrimaryDMID}}} (since {{{InitialSignupDate}}})
+														P.S. You are receiving this email because you have a dmClub account as <nobr>{{{PrimaryDMID}}}</nobr> (since {{{InitialSignupDate}}})
 														</p>
 														
 														<hr class="hide-for-small">
