Improvements to report generation

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 											
 														<!-- CHATTY INTRO -->
 														<p>
-														Dear dmClub member,<br>
+														Dear {{{CustomerGreetName}}},<br>
 														Welcome to our new look newsletter with useful articles and your latest account information.<br>
 														<br>
 														It was a great summer whilst it lasted and I hope you managed to get away for a break. We have a couple of articles with tips on avoiding mobile data roaming charges and how to avoid your business suffering whilst you are away.<br>
