Changing #l to #t in newsletter template

--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
 															</a>
 															<p>
 															Story one content
-															<a href="URL1#l" class="hide-for-small nowrap">Find out more</a>
+															<a href="URL1#t" class="hide-for-small nowrap">Find out more</a>
 															</p>
 															<table class="button radius show-for-small" id="story-3-button">
 																<tr>
@@ -175,7 +175,7 @@
 															</a>
 															<p>
 															Story two content
-															<a href="URL2#l" class="hide-for-small nowrap">Find out more</a>
+															<a href="URL2#t" class="hide-for-small nowrap">Find out more</a>
 															</p>
 															<table class="button radius show-for-small" id="story-3-button">
 																<tr>
@@ -234,7 +234,7 @@
 															</a>
 															<p>
 															Story three content
-															<a href="URL3#l" class="hide-for-small nowrap">Find out more</a>
+															<a href="URL3#t" class="hide-for-small nowrap">Find out more</a>
 															</p>
 															<table class="button radius show-for-small" id="story-3-button">
 																<tr>
