--- a/src/B.html
+++ b/src/B.html
@@ -111,7 +111,7 @@
 														<!-- STORY ONE CONTENT -->
 															<a href="URL1#h">
 															<h2>
-															Headline One
+															Headline One B
 															</h2>
 															</a>
 															<p>
@@ -170,7 +170,7 @@
 														<!-- STORY TWO CONTENT -->
 															<a href="URL2#h">
 															<h2>
-															Headline Two
+															Headline Two B
 															</h2>
 															</a>
 															<p>
@@ -229,7 +229,7 @@
 														<!-- STORY THREE CONTENT -->
 															<a href="URL3#h">
 															<h2>
-															Headline Three
+															Headline Three B
 															</h2>
 															</a>
 															<p>
