Concatenation working with dynamically generated config

--- a/src/A.html
+++ b/src/A.html
@@ -327,8 +327,8 @@
 														<br>
 														<!-- ADDRESS -->
 															dmClub<br>
-															20-22 Curtain Road<br>
-															London EC2A 3NF<br>
+															6 Osborn Street<br>
+															London E1 6TD<br>
 															Tel: 020 7060 2000<br>
 															<a href="mailto:support@dmclub.net">support@dmclub.net</a>
 														<!-- END ADDRESS -->
