Updating email template so HTML lines do not exceed 998 chars

--- a/src/A.html
+++ b/src/A.html
@@ -278,11 +278,16 @@
 													<th>Account</th>
 													<th>Services</th>
 												</tr>								   
-												{{{DMID1_Account}}}{{{DMID1_Services}}}
-												{{{DMID2_Account}}}{{{DMID2_Services}}}
-												{{{DMID3_Account}}}{{{DMID3_Services}}}
-												{{{DMID4_Account}}}{{{DMID4_Services}}}
-												{{{DMID5_Account}}}{{{DMID5_Services}}}
+{{{DMID1_Account}}}
+{{{DMID1_Services}}}
+{{{DMID2_Account}}}
+{{{DMID2_Services}}}
+{{{DMID3_Account}}}
+{{{DMID3_Services}}}
+{{{DMID4_Account}}}
+{{{DMID4_Services}}}
+{{{DMID5_Account}}}
+{{{DMID5_Services}}}
 											</table>
 										
 											<p class="small">
